<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_6e"
    android:orientation="vertical"
    tools:context="com.lklpay.www.CouponsNewActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout style="@style/new_coupons_LinearLayout">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/dimen_6_dip"
                    android:paddingTop="@dimen/dimen_6_dip">

                    <TextView
                        android:id="@+id/tv1"
                        style="@style/new_coupons_TextView"
                        android:text="@string/coupons_name" />

                    <EditText
                        android:id="@+id/coupons_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/tv1"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_gravity="right"
                        android:background="@android:color/transparent"
                        android:ellipsize="none"
                        android:gravity="right|center_vertical"
                        android:hint="@string/coupons_name_hint"
                        android:textColor="@color/black"
                        android:textColorHint="@color/color_6a" />

                </RelativeLayout>

                <include layout="@layout/line_horizontal_gray" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/dimen_6_dip"
                    android:paddingTop="@dimen/dimen_6_dip"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv2"
                        style="@style/new_coupons_TextView"
                        android:text="@string/coupons_type" />

                    <TextView
                        android:id="@+id/tv_coupons_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/iv_arrow_right_h_x"
                        android:gravity="center"
                        android:text="" />

                    <ImageView
                        android:id="@+id/iv_arrow_right_h_x"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/dimen_16_dip"
                        android:gravity="center"
                        android:src="@drawable/arrow_right_h_x" />

                </RelativeLayout>

                <include layout="@layout/line_horizontal_gray" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/dimen_6_dip"
                    android:paddingTop="@dimen/dimen_6_dip">

                    <TextView
                        android:id="@+id/tv3"
                        style="@style/new_coupons_TextView"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/coupons_money" />

                    <EditText
                        android:id="@+id/coupons_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/tv3"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_gravity="right|center_vertical"
                        android:background="@android:color/transparent"
                        android:ellipsize="none"
                        android:gravity="right"
                        android:hint="@string/coupons_money_hint"
                        android:inputType="phone"
                        android:phoneNumber="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/color_6a" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/new_coupons_LinearLayout"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv4"
                    style="@style/new_coupons_TextView"
                    android:text="@string/coupons_tiaojian" />

                <include layout="@layout/line_horizontal_gray" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/dimen_6_dip"
                    android:paddingTop="@dimen/dimen_6_dip">

                    <RadioGroup
                        android:id="@+id/rg_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <RadioButton
                            android:id="@+id/coupons_wu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/coupons_wu"
                            android:textColor="@color/color_gray" />

                        <RadioButton
                            android:id="@+id/coupons_you"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/coupons_wu"
                            android:text="@string/coupons_you"
                            android:textColor="@color/color_gray" />
                    </RadioGroup>

                    <EditText
                        android:id="@+id/coupons_you_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/rg_group"
                        android:layout_gravity="right"
                        android:layout_marginBottom="@dimen/dimen_6_dip"
                        android:layout_marginLeft="@dimen/dimen_6_dip"
                        android:layout_toRightOf="@+id/rg_group"
                        android:background="@android:color/transparent"
                        android:ellipsize="none"
                        android:gravity="right"
                        android:hint="@string/coupons_you_money_hint"
                        android:inputType="phone"
                        android:phoneNumber="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/color_6a" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/coupons_you_money"
                        android:layout_alignBottom="@+id/coupons_you_money"
                        android:layout_toEndOf="@+id/coupons_you_money"
                        android:layout_toRightOf="@+id/coupons_you_money"
                        android:text="元可使用" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout style="@style/new_coupons_LinearLayout">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/dimen_6_dip"
                    android:paddingTop="@dimen/dimen_6_dip">

                    <TextView
                        android:id="@+id/tv5"
                        style="@style/new_coupons_TextView"
                        android:text="@string/coupons_time" />

                    <TextView
                        android:id="@+id/coupons_start_time"
                        style="@style/new_coupons_TextView_time"
                        android:layout_alignParentTop="true"
                        android:layout_toLeftOf="@+id/tv6"
                        android:layout_toStartOf="@+id/tv6"
                        android:text="@string/time_type" />

                    <TextView
                        android:id="@+id/tv6"
                        style="@style/new_coupons_TextView"
                        android:layout_alignParentTop="true"
                        android:layout_toLeftOf="@+id/coupons_end_time"
                        android:layout_toStartOf="@+id/coupons_end_time"
                        android:text="至" />

                    <TextView
                        android:id="@+id/coupons_end_time"
                        style="@style/new_coupons_TextView_time"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/time_type" />

                </RelativeLayout>

                <include layout="@layout/line_horizontal_gray" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/dimen_6_dip"
                    android:paddingTop="@dimen/dimen_6_dip">

                    <TextView
                        android:id="@+id/tv7"
                        style="@style/new_coupons_TextView"
                        android:text="@string/coupons_time_min" />

                    <TextView
                        android:id="@+id/coupons_start_time_min"
                        style="@style/new_coupons_TextView_time"
                        android:layout_alignParentTop="true"
                        android:layout_toLeftOf="@+id/tv8"
                        android:layout_toStartOf="@+id/tv8"
                        android:text="@string/time_min_type" />

                    <TextView
                        android:id="@+id/tv8"
                        style="@style/new_coupons_TextView"
                        android:layout_alignParentTop="true"
                        android:layout_toLeftOf="@+id/coupons_end_time_min"
                        android:layout_toStartOf="@+id/coupons_end_time_min"
                        android:text="至" />

                    <TextView
                        android:id="@+id/coupons_end_time_min"
                        style="@style/new_coupons_TextView_time"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/time_min_type" />

                </RelativeLayout>


            </LinearLayout>

            <Button
                android:id="@+id/submit"
                style="@style/all_btn_style"
                android:layout_width="match_parent"
                android:text="@string/submit" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
