<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.lklpay.www.CouponsPayActivity">

    <include
        android:id="@+id/include1"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_188_dip"
        android:layout_gravity="center"
        android:background="@color/color_6e"
        android:gravity="center"
        android:id="@+id/relativeLayout"
        android:layout_below="@+id/include1">


        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money_reality"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16_sp" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv1"
            android:layout_alignStart="@+id/tv1"
            android:layout_below="@+id/tv1"
            android:layout_marginTop="@dimen/dimen_6_dip"
            android:text="@string/money_coupons"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_14_sp" />

        <TextView
            android:id="@+id/tv_money_reality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv1"
            android:layout_alignBottom="@+id/tv1"
            android:layout_toEndOf="@+id/tv1"
            android:layout_toRightOf="@+id/tv1"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_20_sp" />

        <TextView
            android:id="@+id/tv_money_coupons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv2"
            android:layout_alignBottom="@+id/tv2"
            android:layout_toEndOf="@+id/tv2"
            android:layout_toRightOf="@+id/tv2"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_14_sp" />


    </RelativeLayout>


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/submit"
        android:layout_below="@+id/relativeLayout">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rlist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_6_dip" />
    </android.support.v4.widget.SwipeRefreshLayout>


    <Button
        android:id="@+id/submit"
        style="@style/all_btn_style"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/dimen_26_dip"
        android:layout_alignParentBottom="true"
        android:text="@string/submit_order" />

</RelativeLayout>
